--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,7 +7,7 @@
 html {
     background-color: #eee;
     color: #555;
-    font-family: 'Lato', 'Arial', sans-serif;
+    font-family: 'Times New Roman', 'Arial', sans-serif;
     font-weight: 400;
     font-size: 20px;
     text-rendering: optimizeLegibility;
