--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,6 +17,8 @@ html {
 .row {
     max-width: 960px;
     margin: 0 auto;
+    display: flex;
+    min-height: 100vh;
     background-color: #42a8c0;
     box-shadow: -3px 3px 3px 0px rgba(200,200,200, 0.9);
 }
